--- a/Mission_to_Mars/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars/Mission_to_Mars.ipynb
@@ -27,8 +27,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 96.0.4664\n",
       "Get LATEST chromedriver version for 96.0.4664 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/96.0.4664.45/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\Owner\\.wdm\\drivers\\chromedriver\\win32\\96.0.4664.45]\n"
+      "Driver [C:\\Users\\Hannah\\.wdm\\drivers\\chromedriver\\win32\\96.0.4664.45\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -91,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">A New Video Captures the Science of NASA's Perseverance Mars Rover</div>"
+       "<div class=\"content_title\">Hear Audio From NASA's Perseverance As It Travels Through Deep Space</div>"
       ]
      },
      "execution_count": 5,
@@ -100,7 +99,9 @@
     }
    ],
    "source": [
-    "#display the current title content\n"
+    "#display the current title content\n",
+    "results = slide_elem.find('div', class_='content_title')\n",
+    "results"
    ]
   },
   {
@@ -111,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "\"A New Video Captures the Science of NASA's Perseverance Mars Rover\""
+       "\"Hear Audio From NASA's Perseverance As It Travels Through Deep Space\""
       ]
      },
      "execution_count": 6,
@@ -121,7 +122,7 @@
    ],
    "source": [
     "# Use the parent element to find the first a tag and save it as `news_title`\n",
-    "\n",
+    "news_title = results.text\n",
     "news_title"
    ]
   },
@@ -133,7 +134,7 @@
     {
      "data": {
       "text/plain": [
-       "'With a targeted launch date of July 30, the next robotic scientist NASA is sending to the to the Red Planet has big ambitions.'"
+       "\"The first to be rigged with microphones, the agency's latest Mars rover picked up the subtle sounds of its own inner workings during interplanetary flight.\""
       ]
      },
      "execution_count": 7,
@@ -143,7 +144,8 @@
    ],
    "source": [
     "# Use the parent element to find the paragraph text\n",
-    "\n",
+    "results2 = news_soup.find('div', class_='article_teaser_body')\n",
+    "news_p = results2.text\n",
     "news_p"
    ]
   },
@@ -158,20 +160,51 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visit URL\n",
     "url = 'https://spaceimages-mars.com'\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "\n",
+    "browser.is_element_present_by_css('div.list_text',wait_time =1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'image/featured/mars1.jpg'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find and click the full image button\n"
+    "# Find and click the full image button\n",
+    "html = browser.html\n",
+    "img_soup = soup(html, 'html.parser') \n",
+    "full_img = img_soup.find('div',class_='floating_text_area')\n",
+    "full_img = full_img.find('a')\n",
+    "full_img = full_img['href']\n",
+    "\n",
+    "full_img"
    ]
   },
   {
@@ -191,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 11,
@@ -201,7 +234,7 @@
    ],
    "source": [
     "# find the relative image url\n",
-    "\n",
+    "img_url_rel = full_img\n",
     "img_url_rel"
    ]
   },
@@ -213,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://spaceimages-mars.comimage/featured/mars1.jpg'"
       ]
      },
      "execution_count": 12,
@@ -223,7 +256,7 @@
    ],
    "source": [
     "# Use the base url to create an absolute url\n",
-    "\n",
+    "img_url = url+img_url_rel\n",
     "img_url"
    ]
   },
@@ -317,13 +350,28 @@
    "source": [
     "# Use `pd.read_html` to pull the data from the Mars-Earth Comparison section\n",
     "# hint use index 0 to find the table\n",
-    "\n",
+    "df = pd.read_html('https://galaxyfacts-mars.com/')\n",
+    "df = df[0]\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_head = df.iloc[0]\n",
+    "df2 = df\n",
+    "df2.columns = new_head\n",
+    "df2 = df2.rename(columns={'Mars - Earth Comparison':'Description'})\n",
+    "df2 = df2.set_index('Description')\n",
+    "df = df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +445,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                    Mars            Earth\n",
+       "0                                   Mars            Earth\n",
        "Description                                              \n",
        "Mars - Earth Comparison             Mars            Earth\n",
        "Diameter:                       6,779 km        12,742 km\n",
@@ -408,19 +456,18 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +476,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,26 +513,74 @@
     "hemisphere_image_urls = []\n",
     "\n",
     "# Get a list of all of the hemispheres\n",
-    "links = browser.find_by_css('a.product-item img')\n",
-    "\n",
+    "links = browser.find_by_css('a.product-item img')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://marshemispheres.com/images/full.jpg\n",
+      "Cerberus Hemisphere Enhanced\n",
+      "https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg\n",
+      "Schiaparelli Hemisphere Enhanced\n",
+      "https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg\n",
+      "Syrtis Major Hemisphere Enhanced\n",
+      "https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg\n",
+      "Valles Marineris Hemisphere Enhanced\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Next, loop through those links, click the link, find the sample anchor, return the href\n",
     "for i in range(len(links)):\n",
     "    \n",
     "    \n",
     "    # We have to find the elements on each loop to avoid a stale element exception\n",
-    "    \n",
-    "    \n",
+    "    links = browser.find_by_css('a.product-item img')\n",
+    "    links[i].click()\n",
     "    # Next, we find the Sample image anchor tag and extract the href\n",
-    "    \n",
+    "    page = browser.html\n",
+    "    hemisphere = soup(page, 'html.parser')\n",
+    "    full_img = hemisphere.find('li')\n",
+    "    full_img = full_img.find('a')\n",
+    "    full_img = full_img['href']\n",
+    "    base_url = 'https://marshemispheres.com/'\n",
+    "    full_img = base_url+full_img\n",
     "    \n",
     "    # Get Hemisphere title\n",
-    "    \n",
+    "    title = hemisphere.find('h2')\n",
+    "    title = title.text \n",
     "    \n",
     "    # Append hemisphere object to list\n",
-    "    \n",
+    "    hemisphere_image_urls.append({'img_url':full_img,'title':title})\n",
     "    \n",
     "    # Finally, we navigate backwards\n",
-    "    browser.back()"
+    "    browser.back()\n",
+    "    \n",
+    "hemisphere_image_urls"
    ]
   },
   {
@@ -517,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
